Allow /nick command only in chatrooms that support nick renaming

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=638766